changed location of glyph but doesnt 100% match up

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -140,7 +140,7 @@ $$
 \end{frame}
 
 \begin{frame}{Centered Nested circles}
-  \pgfputat{\pgfxy(11.5, 0)}{\pgfbox[right,base]{
+  \pgfputat{\pgfxy(11.5, 0.3)}{\pgfbox[right,base]{
       \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_nested_circles.pdf}
   }}
   
@@ -176,8 +176,8 @@ $$
   \end{figure}
 \end{frame}
 
-\begin{frame}{Pie Questions}
-  \pgfputat{\pgfxy(11.5, 1.8)}{\pgfbox[right,base]{
+\begin{frame}{Pie Question}
+  \pgfputat{\pgfxy(11.5, 2.35)}{\pgfbox[right,base]{
       \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_pie.pdf}
   }}
     One question arises naturally in the discussion of pies
@@ -187,7 +187,7 @@ $$
 \end{frame}
 
 \begin{frame}{Pie NP-hardness}
-  \pgfputat{\pgfxy(11.5, 1.5)}{\pgfbox[right,base]{
+  \pgfputat{\pgfxy(11.5, 1.52)}{\pgfbox[right,base]{
       \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_pie.pdf}
   }}
   \textbf{Theorem:} It is NP-hard to decide whether for a given set of pie glyphs there is a physically realizable drawing with global utility greater or equal to some value $k$.
