--- a/slides/main.tex
+++ b/slides/main.tex
@@ -245,7 +245,7 @@ $$
 	\hline
 	MinMinStacking (rel) & { 18 }     & 0.11 (0)    & 2.189 (0)    & 37.327        & 0.748           & 0.725         \\
 
-	MinSumStacking (abs) & \red{ 18}      & 0.111 (0)    & 3.974 (0)    & \red{44.467}        & 0.75            & 0.721         \\
+	MinSumStacking (abs) &  18      & 0.111 (0)    & 3.974 (0)    & 44.467       & 0.75            & 0.721         \\
 
 	MinSumStacking (rel) &{  18 }     & 0.111 (0)    & 2.189 (0)    & 37.327        & 0.744           & 0.723         \\
 
