--- a/slides/main.tex
+++ b/slides/main.tex
@@ -73,7 +73,15 @@
   \end{figure}
 \end{frame}
 
-\begin{frame}{Utility functions}
+\begin{frame}{Local Utility Functions}
+\begin{align*}
+  U_i^{vis} & =\partial D_i\setminus \bigcup_{j>i} D_{j} \\
+  \\
+  U_i^{cov} & =\partial D_i \cap \bigcup_{j>i} D_{j}.
+\end{align*}
+\end{frame}
+
+\begin{frame}{Global Utility Functions}
 \begin{align*}
   \lambda_{min} (D) & = \min_{i \in [n]}|U_i^{vis}| \\
   \\
