--- a/slides/main.tex
+++ b/slides/main.tex
@@ -109,7 +109,7 @@ $$
     \begin{subfigure}[b]{0.45\linewidth}
       \centering
       \includegraphics[width=0.5\linewidth]{assets/symbol_nested_elastic_circles}
-      \caption{arbitrary nested disks}
+      \caption{hawaiian nested disks}
     \end{subfigure}\\
     \begin{subfigure}[b]{0.45\linewidth}
       \centering
@@ -119,7 +119,7 @@ $$
     \begin{subfigure}[b]{0.45\linewidth}
       \centering
       \includegraphics[width=0.5\linewidth]{assets/symbol_square}
-      \caption{squares}
+      \caption{mosaic squares}
     \end{subfigure}
   \end{figure}
 
